statum-macros/tests/ui/invalid_transition_not_method.stderr
error: Error: `#[transition]` method `Machine<A>::to_b` must take `self` or `mut self` as its receiver.
  --> tests/ui/invalid_transition_not_method.rs:26:5
   |
26 |     fn to_b(_value: u64) -> Machine<B> {
   |     ^^

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui/invalid_transition_not_method.rs:29:2
   |
29 | }
   |  ^ consider adding a `main` function to `$DIR/tests/ui/invalid_transition_not_method.rs`
